--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
 	// for more information about repositories.
 
 	maven { url 'https://jitpack.io' }
+
+	maven {
+		name = 'Ladysnake Mods'
+		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+	}
 }
 
 dependencies {
@@ -32,6 +37,18 @@ dependencies {
 	// libgenetics
 	modImplementation "com.github.diamonddevv:libgenetics:${project.lg}"
 	include "com.github.diamonddevv:libgenetics:${project.lg}"
+
+	// Cardinal Components (CCA)
+	// BASE
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca}"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca}"
+	// LEVEL
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-level:${project.cca}"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-level:${project.cca}"
+	// ENTITY
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca}"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca}"
+
 }
 
 processResources {
