--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx8G
 	loader_version=0.14.10
 
 # Mod Properties
-	mod_version = 1.0.2
+	mod_version = 1.0.3-SNAPSHOT
 	maven_group = net.diamonddev
 	archives_base_name = ddvgames
 
